# HttPet

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
app/: env.py  main.py
app/controllers/: __init__.py  city.py  env.py  general_report.py  news.py  output.py  user.py
app/core/: __init__.py  geo.py
app/service/: __init__.py  city.py  general_report.py  geo.py  news.py  output.py
app/services/: __init__.py  news.py  output.py  user.py  weather.py
