[project]
name = "httpet"
version = "0.1.0"
description = "Await a pet."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiohttp[speedups]>=3.11.13",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = "True"
explicit_package_bases = "True"

